--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,4 @@
-
-<nav class="navbar fixed-top navbar-light bg-info">
+<nav class="navbar navbar-light bg-info">
     <div class="navbar-left">
         <a> Active User: <%= user.name%></a>
     </div>
@@ -29,5 +28,4 @@
              </div>
         </div>
     </div>
-  </nav>
-
+</nav>
