Updated as of 7/6/2022
Added:
-Itinerary saving functionality via UUID module that creates unique code, and stores it paired with the itinerary array in MongoDB
-Added cover page that:
   -Asks for desired trip duration
   AND
   -Asks for input for unique code to pull itinerary from database
   OR
   -Asks for origin and destination point for itinerary (for creating itinerary from scratch)
-Also disabled route optimization. This allows the user to create a route based on the order in which they add POIs to the itinerary

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,11 +157,11 @@ body {
 
 .container-map{
   width: 98vw;
-  }
+}
 
 .containermap{
   margin-top: 70px;
-  }
+}
 
   #HM{
     padding: 0;
@@ -290,3 +290,34 @@ body {
   .error-template {padding: 40px 15px;text-align: center;}
   .error-actions {margin-top:15px;margin-bottom:15px;}
   .error-actions .btn { margin-right:10px; }
+
+  .hr-text {
+    line-height: 1em;
+    position: relative;
+    outline: 0;
+    border: 0;
+    color: black;
+    text-align: center;
+    height: 1.5em;
+    opacity: .5;
+  }
+  .hr-text:before {
+    content: '';
+    background: linear-gradient(to right, transparent, #818078, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+  }
+  .hr-text:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: black;
+
+    padding: 0 .5em;
+    line-height: 1.5em;
+    color: #818078;
+    background-color: #fcfcfa;
+  }
