--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REALestate Contact</title>
+    <title>Contact</title>
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="/css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/lib/jQuery-3.4.1.js"></script>
