--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -2,6 +2,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Itinerary Generator</title>
+  <link rel="shortcut icon" href="#">
   <link rel="stylesheet" href="/css/lib/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/lib/jQuery-3.4.1.js"></script>
