--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Itinerary Generator</title>
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="/css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/forgotPassword.js"></script>
