--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -27,8 +27,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <form class="col-md-6 text-center">
-        <br><br><br><br><br><br>
-
+        <br><br><br><br>
         <div class="h3 text-center">First, input desired trip length.</div>
           <div class="input-group text-center">
             <input type="number" class="form-control" id="setTime" maxlength="3" size="3" min="1" max="300" placeholder="3" aria-describedby="basic-addon2"/>               
@@ -60,7 +59,7 @@
     </div>
   </div>
   <div class="page2 container-fluid mx-3">
-  <div class="row justify-content-md-center ">
+  <div class="row  ">
     <div id ="HM" class="col col-lg-4">
       <div id="HC" class="card ">
         <div class="card-body">
@@ -213,7 +212,7 @@
             </div>
             <div class="row absolute-bottom">
               <div class="col">
-                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target=".bd-example-modal-sm">key</button>
+                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target=".bd-example-modal-sm">Map Key</button>
                   <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-sm">
                       <div class="modal-content">
