--- a/views/error.ejs
+++ b/views/error.ejs
@@ -27,7 +27,7 @@
                     The resource requested could not not be found on this server.
                 </div>
                 <div class="error-actions">
-                    <a href="login" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
+                    <a href="index" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
                         Take Me Home </a>
                 </div>
                 
