--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-info">
     
-    <p class="navbar-title" onclick="window.location.replace('/homepage')" style="cursor: pointer;">Itinerary Generator</p>
+    <p class="navbar-title mx-2" onclick="window.location.replace('/')" style="cursor: pointer;">Itinerary Generator</p>
     
 </nav>
