--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -238,11 +238,10 @@
             <div class="overflow-auto" style="max-height: 50vh;" id="results_div">
               <ul class="list-group" style="width: 100%;">
                 <li class="list-group-item list-group-item-info" style="width: 100%; height: 100%;">
-                  Instructions:<br><br>
-                  1. Search for the starting address of your trip.<br><br>
-                  2. Input the time constraint for your trip.<br><br>
-                  3. Apply filters for desired locations you would like to visit, and pick as many as you like.<br><br>
-                  4. Export results.<br><br><br><br>
+                  <b>Instructions:</b><br><br>
+                  <b>1.</b> Select point of interest categories using the dropdown menus above, then click search.<br><br>
+                  <b>2.</b> Add locations to your itinerary by clicking the button on the map marker popups or in the list that appears here.<br><br>
+                  <b>3.</b> Click the "See Itinerary" button to customize your stay at each added location and to save your trip for sharing and later retrieval!
                 </li>
               </ul>
             </div>
